--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "babelMacros": {
     "twin": {
       "preset": "styled-components"
@@ -54,7 +48,13 @@
     "@types/d3": "^7.4.0",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19"
+    "eslint": "^8.41.0",
+    "eslint-plugin-react": "^7.32.2",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
