--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://backend-campus-stats:5000/",
   "dependencies": {
+    "@juggle/resize-observer": "^3.4.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
+    "clsx": "^1.2.1",
     "d3": "^7.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
