--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "proxy": "http://backend-campus-stats:5000/",
   "dependencies": {
-    "@juggle/resize-observer": "^3.4.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -12,7 +11,6 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
-    "clsx": "^1.2.1",
     "d3": "^7.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +24,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "babelMacros": {
     "twin": {
@@ -50,13 +54,7 @@
     "@types/d3": "^7.4.0",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.41.0",
-    "eslint-plugin-react": "^7.32.2",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "postcss": "^8.4.19"
   }
 }
